syntax = "proto3";
option optimize_for = SPEED; //加快解析
option java_package = "netty.guigu.netty.proto2"; //生成到那个包下
option java_outer_classname="MyDataInfo";

message MyMessage {
    //定义一个枚举类型
    enum DataType {
        StudentType = 0;
        WorkerType = 1;
    }
    //data_type标识传的是哪一个枚举类型
    DataType data_type = 1;
    //标识每次枚举类型最多只能出现其中一个，节省空间
    oneof dataBody {
        Student student = 2;
        Worker worker = 3;
    }

}

message Student {
    int32 id = 1;
    string name = 2;

}
message Worker {
    string name = 1;
    int32 age = 2;
}